amqp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: rabbitmq
    meta.helm.sh/release-namespace: default
  labels:
    app.kubernetes.io/instance: rabbitmq
  name: rabbitmq-amqp
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: rabbitmq-amqp.local
    http:
      paths:
      - backend:
          service:
            name: rabbitmq
            port:
              name: amqp
        path: /
        pathType: ImplementationSpecific
